
v0.6.12
-------

ScreenBuffer blending: style transparency bugfix.


v0.6.11
-------

Improvement of the sprite editor (editor's background character is not customizable).


v0.6.10
-------

Now it is possible to resize a ScreenBuffer.
Improvement of the sprite editor (sprite resizing, editor's background colors are customizable).


v0.6.9
------

Many type of transparencies: foreground color, background color, style & character.
New: a sprite editor, located in demo/sprite-editor.js.


v0.6.8
------

Refactoring, so the tile-variant & the wrap-variant of blitter are now available for the terminal blitter.


v0.6.7
------

The 'tile' blitter is now faster and cleaner.
Some bugfix on buffer creation (size should be integer, not float).


v0.6.6
------

The buffer to buffer blitter now support the 'tile' option.


v0.6.5
------

The buffer to buffer blitter now support the 'wrap' option.


v0.6.2 - v0.6.4
---------------

Improved terminal's blitter.


v0.6.1
------

ScreenBuffer refactoring.


v0.6.0
------

Major change in the module.exports tree: the backward compatibility is broken, but it can be easily fixed.
Just replace:

var term = require( 'terminal-kit' ) ;

... by:

var term = require( 'terminal-kit' ).terminal ;

Now, that is when the .terminal property is accessed for the first time that a terminal is guessed.

This make the code cleaner and remove any trouble when circular require() occurs: the module does not perform
anything until an userland code request so.


v0.5.17
-------

Spaceship demo: added a spaceship moving with the arrow keys.


v0.5.16
-------

Spaceship demo: scrolling space.


v0.5.15
-------

New: term.ScreenBuffer object. Still a work in progress. Documentation will be available when stabilized.


v0.5.14
-------

Great news: now GPM is supported, so if the daemon is running, the mouse is supported even in the Linux Console!


v0.5.13
-------

Bugfix when COLORTERM is not defined, it causes a crash.


v0.5.12
-------
