@@ -3,6 +3,8 @@ v0.6.12
 -------
 
 ScreenBuffer blending: style transparency bugfix.
+Improvement of the sprite editor (new features: fill colors/style, put only attributes).
+Improvement of the demo graphics.
 
 
 v0.6.11
